fix alignment issue

--- a/css/style-one.css
+++ b/css/style-one.css
@@ -758,7 +758,11 @@ a {
     color: #fff !important;
     border-radius: 10px !important;
     transition: .3s all ease;
+    transform: rotate(90deg);
 }
+
+
+
 
 .environment-carousel .owl-prev:hover,
 .environment-carousel .owl-next:hover,
@@ -1304,7 +1308,7 @@ a {
 
 .news-events .news-events-wrapper {
     padding: 80px 0;
-    width: 65%;
+    width: 66%;
     margin: auto;
 
 
@@ -1343,17 +1347,19 @@ a {
     opacity: 1;
     /* Slight transparency for non-centered items */
     transition: opacity 0.3s ease, transform 0.3s ease, border-radius 0.3s ease;
-    transform: scale(0.8);
+    transform: scale(1);
     border-radius: 15px;
     /* Initial border-radius for non-centered items */
     z-index: 1;
     height: 416px;
+
 
 }
 
 .owl-carousel .owl-item img {
     width: 100%;
     height: 100%;
+    
 }
 
 @media (max-width:575px) {
@@ -1384,7 +1390,7 @@ a {
 .news-events-carousel .center-item .item {
     opacity: 1;
     /* Full opacity for the centered item */
-    transform: scale(1.2);
+    transform: scale(1.4);
     border-radius: 0;
     /* Remove border-radius when centered and scaled */
     z-index: 10;
@@ -1529,7 +1535,7 @@ a {
 
 .achievements-wrapper {
     padding: 100px 0;
-    width: 64%;
+    width: 64.5%;
     margin: auto;
 
 
@@ -1608,7 +1614,7 @@ a {
 
 .college-staff-wrapper {
     padding: 100px 0;
-    width: 65%;
+    width: 54.5%;
     margin: auto;
 
 
